RESOLVED FIXED243455
Fix surrogate handling in content breaking
https://bugs.webkit.org/show_bug.cgi?id=243455
Summary Fix surrogate handling in content breaking
Rob Buis
Reported 2022-08-02 08:21:10 PDT
Fix surrogate handling in content breaking.
Attachments
Patch (1.52 KB, patch)
2022-08-02 08:23 PDT, Rob Buis
no flags
Rob Buis
Comment 1 2022-08-02 08:23:00 PDT
EWS
Comment 2 2022-08-02 14:41:42 PDT
Committed 253055@main (b4dae2e729fe): <https://commits.webkit.org/253055@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 461360 [details].
Radar WebKit Bug Importer
Comment 3 2022-08-02 14:42:16 PDT
Note You need to log in before you can comment on or make changes to this bug.