Cherry-pick b4dae2e729fe. rdar://problem/96291329

Fix surrogate handling in content breaking
    https://bugs.webkit.org/show_bug.cgi?id=243455

    Reviewed by Alan Bujtas.

    Treat having a surrogate start at the beginning of the inline item as valid.

    * Source/WebCore/layout/formattingContexts/inline/InlineContentBreaker.cpp:
    (WebCore::Layout::lastValidBreakingPosition):

    Canonical link: https://commits.webkit.org/253055@main

Canonical link: https://commits.webkit.org/252432.334@safari-7614-branch